fixes the white space when scrolling
fixed the sidebar in the dashboard and extended the background so that there is no white area when scrolling.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,6 @@
 
 body, html {
+  background-image:url(../img/blurred-background-86.jpg);
   height: 100%;
 }
 
@@ -70,7 +71,7 @@ body, html {
 }
 
 #sidebar {
-    position:absolute;
+    position:fixed;
     top:0; bottom:0; left:0;
     width:100px;
     background: #545454;
